--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,13 @@
 
     </style>
 
+    <style name="text_roboto_italic_h2">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/roboto_light_italic</item>
+        <item name="android:textSize">14sp</item>
+
+    </style>
+
     <style name="text_roboto_medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
