--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -24,7 +24,7 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/color_transparent"
+        android:background="@color/black"
         android:contentInsetStart="0dp"
         android:contentInsetEnd="0dp"
         android:contentInsetRight="0dp"
@@ -42,6 +42,24 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:drawableStart="@drawable/ic_calendar_24"
+                tools:text="toDay"
+                android:fontFamily="@font/roboto"
+                android:textSize="12sp"
+                android:drawablePadding="3dp"
+                android:gravity="center"
+                android:layout_centerVertical="true"
+
+                android:id="@+id/tvPostedDate"
+                android:layout_marginStart="8dp"
+                android:text="@string/today"
+
+                android:textColor="@color/white_75"
+
+                android:layout_height="wrap_content"/>
+
+            <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -52,7 +70,7 @@
                 android:minWidth="?attr/actionBarSize"
                 android:scaleType="center"
                 android:textColor="@color/white_75"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:visibility="visible"
 
                 tools:text="title bar" />
@@ -60,16 +78,23 @@
 
             <ImageView
                 android:id="@+id/imMenu"
-                android:layout_width="20dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="10dp"
+
+
+
                 android:tint="@color/white_75"
-                android:padding="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="2dp"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+
+
+
 
                 android:onClick="@{()->listener.onMenu()}"
-                app:srcCompat="@drawable/ic_menu" />
+                android:src="@drawable/ic_refresh_white_24dp" />
 
 
         </RelativeLayout>
