--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -20,40 +20,44 @@
         android:background="@color/black"
         >
 
-        <FrameLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
             android:layout_above="@id/linBottom">
 
 
-            <ImageView
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/youtube_player_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_gravity="center"
-                android:transitionName="@string/shareView"
-                android:onClick="@{(view)->viewModel.openPostDetail(item,view)}"
-                srcImageUrl="@{item.imageUrl}"
                 />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
 
-                android:src="@drawable/ic_play_circle_outline_black_24dp"
-                android:layout_height="wrap_content" />
+            <View
+                android:id="@+id/overlay_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@id/youtube_player_view"
+                app:layout_constraintBottom_toBottomOf="@id/youtube_player_view"
+                android:clickable="true"
+                android:focusable="true" />
 
             <TextView
                 style="@style/text_roboto_bold_h1"
                 android:text="@{item.title}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:textColor="@color/white"
                 tools:text="hello abc" />
 
-        </FrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <View
             android:layout_width="match_parent"
             android:layout_alignParentBottom="true"
